{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 498,
  "lineage": "93f0121a-407f-a244-521f-6f21311dd3fc",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b12d3152c0cc71",
            "arn": "arn:aws:ec2:ap-south-1:971422688758:instance/i-003c2b12750877915",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003c2b12750877915",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "paritosh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d4daac6db013e675",
            "private_dns": "ip-10-0-1-52.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.52",
            "public_ip": "3.110.172.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06a254c7dcf7e392e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-037eca6e42e46a78b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c2a4b6b9b9ed37e",
            "tags": {
              "Name": "pubinstance"
            },
            "tags_all": {
              "Name": "pubinstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-037eca6e42e46a78b"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.security_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b12d3152c0cc71",
            "arn": "arn:aws:ec2:ap-south-1:971422688758:instance/i-054185ab7aac784f7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054185ab7aac784f7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "paritosh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05a0dc5c2dbb16dce",
            "private_dns": "ip-10-0-3-75.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08f2034c0b61016bb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-037eca6e42e46a78b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a26f2b8e900d1fe9",
            "tags": {
              "Name": "Kafka"
            },
            "tags_all": {
              "Name": "Kafka"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-037eca6e42e46a78b"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.security_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "pvtinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b12d3152c0cc71",
            "arn": "arn:aws:ec2:ap-south-1:971422688758:instance/i-0892152ef2035e6f5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0892152ef2035e6f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "paritosh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a2b27152076bf999",
            "private_dns": "ip-10-0-3-180.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a5338889accf532f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-037eca6e42e46a78b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a26f2b8e900d1fe9",
            "tags": {
              "Name": "myinstance"
            },
            "tags_all": {
              "Name": "myinstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-037eca6e42e46a78b"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.security_group"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:971422688758:loadbalancer/app/demo-lb/6315403e121ad58a",
            "arn_suffix": "app/demo-lb/6315403e121ad58a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "demo-lb-1121909007.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:971422688758:loadbalancer/app/demo-lb/6315403e121ad58a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-037eca6e42e46a78b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03c2a4b6b9b9ed37e"
              },
              {
                "subnet_id": "subnet-085cdb85a0aadec69"
              }
            ],
            "subnets": [
              "subnet-03c2a4b6b9b9ed37e",
              "subnet-085cdb85a0aadec69"
            ],
            "tags": {
              "Name": "demo-lb"
            },
            "tags_all": {
              "Name": "demo-lb"
            },
            "vpc_id": "vpc-08fb2338cf1c3b640",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.loadbalancer.aws_lb_target_group.demo_target",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:971422688758:listener/app/demo-lb/6315403e121ad58a/2f0ed3d9dd6a37ef",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:971422688758:targetgroup/demo-target-group/ca47db53cd6c9e16",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:971422688758:listener/app/demo-lb/6315403e121ad58a/2f0ed3d9dd6a37ef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:971422688758:loadbalancer/app/demo-lb/6315403e121ad58a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_lb.load_lb",
            "module.loadbalancer.aws_lb_target_group.demo_target",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "demo_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:971422688758:targetgroup/demo-target-group/ca47db53cd6c9e16",
            "arn_suffix": "targetgroup/demo-target-group/ca47db53cd6c9e16",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:971422688758:targetgroup/demo-target-group/ca47db53cd6c9e16",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "demo-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "demo-target-group"
            },
            "tags_all": {
              "Name": "demo-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08fb2338cf1c3b640"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_attachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:971422688758:targetgroup/demo-target-group/ca47db53cd6c9e16-20241229064345582100000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:971422688758:targetgroup/demo-target-group/ca47db53cd6c9e16",
            "target_id": "i-054185ab7aac784f7"
          },
          "dependencies": [
            "module.compute.aws_instance.my_instance",
            "module.loadbalancer.aws_lb_target_group.demo_target",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8cbe25c1186afbc",
            "arn": "arn:aws:ec2:ap-south-1:971422688758:elastic-ip/eipalloc-0e8cbe25c1186afbc",
            "domain": "vpc",
            "id": "eipalloc-0e8cbe25c1186afbc",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-1-82-5.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.82.5",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:971422688758:internet-gateway/igw-05502113e46a4b52b",
            "id": "igw-05502113e46a4b52b",
            "owner_id": "971422688758",
            "tags": {
              "Name": "main-gateway"
            },
            "tags_all": {
              "Name": "main-gateway"
            },
            "vpc_id": "vpc-08fb2338cf1c3b640"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8cbe25c1186afbc",
            "association_id": "eipassoc-0eef4cf8ee3fcce2d",
            "connectivity_type": "public",
            "id": "nat-0fb9db8381da1cee3",
            "network_interface_id": "eni-085f64961dd7f7db2",
            "private_ip": "10.0.1.226",
            "public_ip": "65.1.82.5",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03c2a4b6b9b9ed37e",
            "tags": {
              "Name": "demo-nat"
            },
            "tags_all": {
              "Name": "demo-nat"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:971422688758:route-table/rtb-0c8a3d6520003a996",
            "id": "rtb-0c8a3d6520003a996",
            "owner_id": "971422688758",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fb9db8381da1cee3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fb2338cf1c3b640"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat-gt",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:971422688758:route-table/rtb-009f3bda69fc09b4b",
            "id": "rtb-009f3bda69fc09b4b",
            "owner_id": "971422688758",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05502113e46a4b52b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fb2338cf1c3b640"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067c04fcd24ebb623",
            "route_table_id": "rtb-0c8a3d6520003a996",
            "subnet_id": "subnet-0a26f2b8e900d1fe9"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat-gt",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet_1",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbae94a790f9bdd6",
            "route_table_id": "rtb-0c8a3d6520003a996",
            "subnet_id": "subnet-0ce7ed522734105ff"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat-gt",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet_2",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2b29fb2190cd918",
            "route_table_id": "rtb-009f3bda69fc09b4b",
            "subnet_id": "subnet-03c2a4b6b9b9ed37e"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet_1",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebdfe0b76d4643d1",
            "route_table_id": "rtb-009f3bda69fc09b4b",
            "subnet_id": "subnet-085cdb85a0aadec69"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet_2",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:971422688758:subnet/subnet-0a26f2b8e900d1fe9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a26f2b8e900d1fe9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "971422688758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-08fb2338cf1c3b640"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:971422688758:subnet/subnet-0ce7ed522734105ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce7ed522734105ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "971422688758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-08fb2338cf1c3b640"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:971422688758:subnet/subnet-03c2a4b6b9b9ed37e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c2a4b6b9b9ed37e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "971422688758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-08fb2338cf1c3b640"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:971422688758:subnet/subnet-085cdb85a0aadec69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085cdb85a0aadec69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "971422688758",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-08fb2338cf1c3b640"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:971422688758:vpc/vpc-08fb2338cf1c3b640",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-041db754c719e2c8e",
            "default_route_table_id": "rtb-07a5adb5f21ce4851",
            "default_security_group_id": "sg-0153dd6b8a5b3b7a9",
            "dhcp_options_id": "dopt-02427c3dcac7b6e7a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08fb2338cf1c3b640",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07a5adb5f21ce4851",
            "owner_id": "971422688758",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:971422688758:security-group/sg-037eca6e42e46a78b",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-037eca6e42e46a78b",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "971422688758",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo_sg"
            },
            "tags_all": {
              "Name": "demo_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fb2338cf1c3b640"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:971422688758:security-group-rule/sgr-07f65539faa78e30c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07f65539faa78e30c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-037eca6e42e46a78b",
            "security_group_rule_id": "sgr-07f65539faa78e30c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:971422688758:security-group-rule/sgr-0f1274af903f54e1c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0f1274af903f54e1c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-037eca6e42e46a78b",
            "security_group_rule_id": "sgr-0f1274af903f54e1c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_ipv4_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:971422688758:security-group-rule/sgr-0ee95295bb9ad1b39",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ee95295bb9ad1b39",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-037eca6e42e46a78b",
            "security_group_rule_id": "sgr-0ee95295bb9ad1b39",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc",
            "module.security.aws_security_group.security_group"
          ]
        }
      ]
    }
  ]
}